fix contrast errors

--- a/wdd230/lesson11/css/global.css
+++ b/wdd230/lesson11/css/global.css
@@ -13,6 +13,7 @@
 :root {
 	/* site colors: var(--color-name) */
       --brown-color: #6f5649;
+      --dpink-color: #cd2e8b;
       --pink-color: #DB3896;
       --lightpink-color: #fcb3de;
       --slightpink-color: #ffc4e5;
